Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125328

Grpc genenerators: implicitly created export.qpb.h is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.2, 6.8.0 FF
    • 6.7, 6.8.0 FF
    • GRPC, Protocol Buffers
    • None
    • 151ad6818 (dev), df24d92f8 (6.7), 4a61dc714 (dev), cc362edca (6.8), 36070fffc (6.7)
    • Foundation Sprint 108

      When qt_add_protobuf or qt_add_grpc is invoked without an existing target (and a library is created) then the generated export header:

      /* This file is autogenerated. DO NOT CHANGE. All changes will be lost */
      
      #if defined(QT_SHARED) || !defined(QT_STATIC)
      #  if defined(QT_BUILD_QTCLIENT-PROTO_LIB)
      #    define QPB_QTCLIENT-PROTO_EXPORT Q_DECL_EXPORT
      #  else
      #    define QPB_QTCLIENT-PROTO_ EXPORT Q_DECL_IMPORT
      #  endif
      #else
      #  define QPB_QTCLIENT-PROTO_EXPORT
      #endif
      

      is broken due to 'QT_BUILD_QTCLIENT-PROTO_LIB' as "-" is not supported as macro / preprocessor name.

        For Gerrit Dashboard: QTBUG-125328
        # Subject Branch Project Status CR V

            dennisoberst Dennis Oberst
            dennisoberst Dennis Oberst
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: