qt{proto,grpc}gen: handle invalid c identifier for export macros

- In the generator we prohibit invalid C++ identifiers
- In CMake we convert the target name to a valid C++ identifier.

Fixes: QTBUG-125328
Change-Id: I436cc9e0027659e7bda7d9a488f6212750e942d4
Reviewed-by:  Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 151ad6818a8bfb687e18d8015c3ce959f6665f62)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>